--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,12 @@
     transform: rotate(360deg);
   }
 }
+
+
+.hero-bg {
+  background-image: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url(https://i.ibb.co/X7ybsHw/hero-bg.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
